
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sun4i_i2s {int regmap; } ;


 int SUN4I_I2S_CTRL_REG ;
 int SUN4I_I2S_CTRL_TX_EN ;
 int SUN4I_I2S_DMA_INT_CTRL_REG ;
 int SUN4I_I2S_DMA_INT_CTRL_TX_DRQ_EN ;
 int SUN4I_I2S_FIFO_CTRL_FLUSH_TX ;
 int SUN4I_I2S_FIFO_CTRL_REG ;
 int SUN4I_I2S_TX_CNT_REG ;
 int regmap_update_bits (int ,int ,int ,int ) ;
 int regmap_write (int ,int ,int ) ;

__attribute__((used)) static void sun4i_i2s_start_playback(struct sun4i_i2s *i2s)
{

 regmap_update_bits(i2s->regmap, SUN4I_I2S_FIFO_CTRL_REG,
      SUN4I_I2S_FIFO_CTRL_FLUSH_TX,
      SUN4I_I2S_FIFO_CTRL_FLUSH_TX);


 regmap_write(i2s->regmap, SUN4I_I2S_TX_CNT_REG, 0);


 regmap_update_bits(i2s->regmap, SUN4I_I2S_CTRL_REG,
      SUN4I_I2S_CTRL_TX_EN,
      SUN4I_I2S_CTRL_TX_EN);


 regmap_update_bits(i2s->regmap, SUN4I_I2S_DMA_INT_CTRL_REG,
      SUN4I_I2S_DMA_INT_CTRL_TX_DRQ_EN,
      SUN4I_I2S_DMA_INT_CTRL_TX_DRQ_EN);
}
